--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "date-fns": "4.1.0",
     "dompurify": "^3.2.7",
     "embla-carousel-react": "8.5.1",
-    "firebase": "latest",
+    "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
